(next)
  - PC-98 FM synthesis fixed not to initialize itself
    again when rebooting, which fixes a problem with
    garbled FM synthesis after rebooting.
  - Removed some now-unnecessary SDL Video quit/init
    calls from Windows builds.
  - machine=pc98 now starts entire emulation in PC-98
    mode instead of booting up in IBM PC mode and
    switching to PC-98 mode.
  - Initial "BIOS" startup screen now operates in
    PC-98 mode when machine=pc98.
  - Prefetch core debug code now disabled at compile
    time. Seems to be stable so far.
  - Prefetch core now emulates partial load of the
    prefetch buffer on miss, and completing the buffer
    fill on hit, to better emulate (probable) 80486
    behavior.
  - 486_prefetch is now a valid cputype setting, despite
    the setting having existed for years in the source
    code. Prior to this fix, 486_prefetch was ignored.
0.82.3 (02/13/2018)
  - Removed DOSBox SVN-style "fast" A20 gate emulation.
    Recent changes make it infeasible to keep. "fast" is
    now mapped to "mask" mode.
  - RAM aliasing is now always on, even if memalias is not
    set, in order to help enforce A20 gate behavior, and
    to fix emulator crashes when a non-aliased RAM page
    is referenced through an alias.
  - Cleanup and rewrite of prefetch core, to make the code
    cleaner and more readable and maintainable.
  - DOS file I/O updated to apply a proper delay rather
    than the old DOSBox SVN code's cycle count dependent
    method. The delay by default will slow disk I/O down
    to mid 1990's IDE PIO speeds, which can resolve issues
    with MS-DOS demoscene or game executables that can
    malfunction when disk I/O is too fast.
  - PIC code updated to enforce a proper IRQ delay on ALL
    IRQ signals, which fixes issues with MS-DOS executables
    that have race conditions between their code and their
    interrupt handlers.
  - DOS Shell now shows the full intro text only at first
    run, instead of every shell invocation.